# hurd

./: .gitignore  Cargo.toml  Makefile  config.make.in  configure.ac  context7.json
.cargo/: config.toml
crates/hurd-rt/: Cargo.toml
crates/hurd-rt-macros/: Cargo.toml
crates/hurd-rt-macros/src/: lib.rs
crates/hurd-rt/src/: lib.rs
crates/init/: Cargo.toml
crates/init/src/: main.rs
crates/libc/: Cargo.toml
crates/libc-sys/: Cargo.toml  build.rs
crates/libc-sys/src/: lib.rs
crates/libc/src/: lib.rs
crates/mach-sys/: Cargo.toml
crates/mach-sys/src/: lib.rs
crates/mig/: Cargo.toml
crates/mig-macros/: Cargo.toml
crates/mig-macros/examples/: smoketest.rs
crates/mig-macros/src/: emit.rs  lib.rs  parse.rs
crates/mig/src/: lib.rs
crates/ports-sys/: Cargo.toml  build.rs
crates/ports-sys/src/: lib.rs
crates/shutdown/: Cargo.toml
crates/shutdown/src/: main.rs
crates/trivfs/: Cargo.toml
crates/trivfs-sys/: Cargo.toml  build.rs
crates/trivfs-sys/src/: lib.rs
crates/trivfs/src/: cleanup.rs  demuxer.rs  lib.rs  startup.rs  types.rs
docs/superpowers/plans/: 2026-05-13-cargo-rust-build.md  2026-05-14-mig-port-transfer-macro.md
docs/superpowers/specs/: 2026-05-13-cargo-rust-build-design.md  2026-05-14-mig-port-transfer-macro-design.md
init/: Makefile  init.rs
