[package]
name = "init"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "init"
path = "src/main.rs"

[dependencies]
# `package = "libc-sys"` aliases the crate locally to `libc` so source code
# can keep writing `use libc::*` regardless of the on-disk package name.
libc = { package = "libc-sys", path = "../libc-sys" }
hurd-rt = { path = "../hurd-rt" }
