[package]
name = "shutdown"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "shutdown"
path = "src/main.rs"

[dependencies]
libc       = { package = "libc-sys", path = "../libc-sys" }
mach-sys   = { path = "../mach-sys" }
ports-sys  = { path = "../ports-sys" }
trivfs     = { path = "../trivfs" }
mig        = { path = "../mig" }
hurd-rt    = { path = "../hurd-rt" }
